Fixed datepicker dropdown hiding behind .wrapper

--- a/app/assets/stylesheets/widgets/_booking.sass
+++ b/app/assets/stylesheets/widgets/_booking.sass
@@ -2,8 +2,7 @@
   @extend %rounded-corners
   background-color: white
   position: relative
-  margin-left: auto
-  margin-right: auto
+  margin: 0 auto 200px
   max-width: 435px
   padding: 15px 15px 12px 15px
   transition: all 0.5s ease-in-out
